tests/baselines/reference/asyncInterface.errors.txt
tests/cases/conformance/async/downlevel/asyncInterface.ts(6,1): error TS1045: 'async' modifier cannot be used with an interface declaration.


==== tests/cases/conformance/async/downlevel/asyncInterface.ts (1 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    async interface I {  
    ~~~~~
!!! error TS1045: 'async' modifier cannot be used with an interface declaration.
    }